# rust_ssg

./: Cargo.toml  README.md  main.site  template.html  test.geml  test.html
src/: lib.rs
